# k4MLJetTagger

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  output_jettags.root  setup.sh
.github/workflows/: key4hep-build.yaml
docs/: Helpers_8h.html  JetObservablesRetriever_8cpp.html  ONNXRuntime_8cpp.html  ONNXRuntime_8h.html  annotated.html  build_2include_2k4ProjectTemplate_2k4ProjectTemplateVersion_8h.html  build_2k4ProjectTemplate_2genConfDir_2k4ProjectTemplate_2k4ProjectTemplatePluginsConf_8py.html  classJetObservablesRetriever-members.html  classJetObservablesRetriever.html  classONNXRuntime-members.html  classVarMapper-members.html  classes.html  createJetTagger_8py.html  dir_16280b94ec18e6f0e1f1d824982fb61b.html  dir_30c480ca2189c291831b6a03ab53490b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_5c761713bf5d0875d267b95dac50e2aa.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_7deb69343d56e7c1ca289b74c5afd5aa.html  dir_d1d9b2ce7966d1316b45ff85a86ef455.html  dir_e10f14566bf22034c1d80c8c6148082c.html  dir_e3a4aa6ae53c85312025264fe419cff9.html  dir_ec32295da1ba82a21b4e2912a49fdbe8.html  dir_f33b6b43a769ceed032635d3b0eb96fb.html  files.html  functions.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  install_2include_2k4ProjectTemplate_2k4ProjectTemplateVersion_8h.html  install_2python_2k4ProjectTemplate_2k4ProjectTemplatePluginsConf_8py.html  md_README.html  menudata.js  namespaceOrt.html  namespacecreateJetTagger.html  namespacek4ProjectTemplate_1_1k4ProjectTemplatePluginsConf.html  namespacek4ProjectTemplate_1_1version.html  namespacemembers.html  (+10 more)
docs/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Helpers_8cpp.html  Helpers_8h_source.html  JetObservablesRetriever_8h.html  JetObservablesRetriever_8h_source.html  JetTagger_8cpp.html  ONNXRuntime_8h_source.html  README_8md.html  ReleaseNotes_8md.html  Structs_8h.html  Structs_8h_source.html  WeaverInterface_8cpp.html  WeaverInterface_8h.html  WeaverInterface_8h_source.html  build_2include_2k4ProjectTemplate_2k4ProjectTemplateVersion_8h_source.html  build_2k4ProjectTemplate_2genConfDir_2k4ProjectTemplate_2____init_____8py.html  classONNXRuntime.html  classVarMapper.html  classWeaverInterface-members.html  classWeaverInterface.html  classk4ProjectTemplate_1_1k4ProjectTemplatePluginsConf_1_1JetTagger-members.html  classk4ProjectTemplate_1_1k4ProjectTemplatePluginsConf_1_1JetTagger.html  dir_68c3b7fd5cb1c5bf98d2ffc7764fec3f.html  dir_8f2980731aba7ec7b9fcae5764f196e3.html  dir_96d7617155abae15b05998714fccdbfb.html  dir_a3544bdc51653d591f84138b31452f90.html  dir_e2aeb427ca0e90baeadccb9ddc280846.html  dir_e3c0f72c95206b1c1c960f59455cb5d4.html  dir_e68e8157741866f444e17edd764ebbae.html  dir_e8fe55bf71f02722a0f1ab687a397f3e.html  dir_fa3976aa92337a9495c49dc463c61ee9.html  files.html  functions_func.html  functions_rela.html  functions_type.html  functions_vars.html  hierarchy.html  install_2include_2k4ProjectTemplate_2k4ProjectTemplateVersion_8h_source.html  install_2python_2k4ProjectTemplate_2____init_____8py.html  (+10 more)
docs/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  Helpers_8cpp.tex  Helpers_8h.tex  JetObservablesRetriever_8cpp.tex  JetObservablesRetriever_8h.tex  JetTagger_8cpp.tex  ONNXRuntime_8cpp.tex  ONNXRuntime_8h.tex  ReleaseNotes_8md.tex  Structs_8h.tex  WeaverInterface_8cpp.tex  WeaverInterface_8h.tex  annotated.tex  build_2include_2k4ProjectTemplate_2k4ProjectTemplateVersion_8h.tex  build_2k4ProjectTemplate_2genConfDir_2k4ProjectTemplate_2____init_____8py.tex  build_2k4ProjectTemplate_2genConfDir_2k4ProjectTemplate_2k4ProjectTemplatePluginsConf_8py.tex  classJetObservablesRetriever.tex  classVarMapper.tex  (+45 more)
extras/: config_for_weaver_training.yaml  env_for_onnx.yml
k4JetTagger/: CMakeLists.txt
k4MLJetTagger/: CMakeLists.txt
k4MLJetTagger/options/: createJetMCTag.py  createJetTags.py  writeJetConstObs.py  writeJetTags.py
k4MLJetTagger/src/components/: Helpers.cpp  Helpers.h  JetMCTagger.cpp  JetObsWriter.cpp  JetObsWriter.h  JetObservablesRetriever.cpp  JetObservablesRetriever.h  JetTagWriter.cpp  JetTagWriter.h  JetTagger.cpp  ONNXRuntime.cpp  ONNXRuntime.h  Structs.h  WeaverInterface.cpp  WeaverInterface.h
k4ProjectTemplate/: CMakeLists.txt
test/: CMakeLists.txt
tests/: CMakeLists.txt
(+191 files in other folders)
